Fix : wrong background color on mobile design

--- a/htdocs/css/default.css
+++ b/htdocs/css/default.css
@@ -216,7 +216,7 @@ a{
 @media(max-width: 420px){
     
     html{
-        background: #006699;
+        background-image: none;
     }
     
     body{
